<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/eventsFragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/calendarFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/savedFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_saved" />
    </group>

    <item android:title="Communicate">
        <menu >
            <item
                android:id="@+id/settingFragment"
                android:icon="@drawable/ic_menu_share"
                android:checkable="true"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
